<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorForeground"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:layout_margin="5dp"
            android:src="@drawable/ic_settings"
            android:tint="?android:colorBackground"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="5dp"
            android:text="@string/settings"
            android:textColor="?android:colorBackground"
            android:textSize="22sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_rate" />

            <EditText
                android:id="@+id/et_sample_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme" />

            <RadioGroup
                android:id="@+id/rg_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_theme_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light" />

                <RadioButton
                    android:id="@+id/rb_theme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark" />

                <RadioButton
                    android:id="@+id/rb_theme_system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>