<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorForeground"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:layout_margin="5dp"
            android:src="@drawable/ic_info"
            android:tint="?android:colorBackground"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="5dp"
            android:text="@string/about"
            android:textColor="?android:colorBackground"
            android:textSize="22sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="[appVersion]"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_app_developed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_developed_by" />

            <ImageView
                android:id="@+id/iv_dev_logo"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:src="@drawable/hj_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_dev_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/dev_website" />

            <LinearLayout
                android:id="@+id/ll_insta_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_instagram_icon_by_hardcodedjoy"
                    android:tint="?android:colorForeground"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_insta_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_instagram_page" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_youtube_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_youtube_icon_by_hardcodedjoy"
                    android:tint="?android:colorForeground"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_youtube_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_youtube_handle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/github_mark"
                    android:tint="?android:colorForeground"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_github_page" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_app_uses_libs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_uses" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>