<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorForeground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:text="@string/app_name"
            android:textColor="?android:colorBackground"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:layout_margin="5dp"
            android:src="@drawable/ic_menu"
            android:tint="?android:colorBackground"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_in_microphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Microphones:"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_in_microphone_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Mics"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/ll_plots"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="vertical"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_start"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:background="?android:colorForeground"
                        android:text="@string/start"
                        android:textColor="?android:colorBackground"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_stop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:background="?android:colorForeground"
                        android:text="@string/stop"
                        android:textColor="?android:colorBackground"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_out_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Speakers:"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_out_speaker_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Speakers"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_440hz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="440Hz"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle,HardcodedText" />

                <Button
                    android:id="@+id/btn_2000hz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2000Hz"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle,HardcodedText" />

            </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/fl_menu_options"
            layout="@layout/layout_menu_options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|right" />

    </FrameLayout>

</LinearLayout>